Link to html version of paper

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
     <div class="container">
         <div class="row title">
-            SUNTRAC<span class="sup"><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/tri.13493"
+            SUNTRAC<span class="sup"><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/tri.13493"
                     target="_blank">*</a></span>&nbsp;Screening
             Tool
         </div>
